# sole-zed-fork

./: Cargo.toml
crates/acp_thread/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/tools/: web_search_tool.rs
crates/agent_servers/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs  llm_token.rs  test.rs  user.rs
crates/cloud_api_types/: Cargo.toml
crates/cloud_api_types/src/: cloud_api_types.rs
crates/dap/: Cargo.toml
crates/dap/src/: dap.rs
crates/debugger_ui/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction/src/: edit_prediction.rs  edit_prediction_tests.rs  mercury.rs  open_ai_compatible.rs  prediction.rs  zed_edit_prediction_delegate.rs  zeta.rs
crates/edit_prediction_cli/: Cargo.toml
crates/edit_prediction_cli/src/: predict.rs
crates/edit_prediction_ui/: Cargo.toml
crates/edit_prediction_ui/src/: edit_prediction_button.rs  rate_prediction_modal.rs
crates/editor/: Cargo.toml
crates/editor/src/: code_actions.rs  edit_prediction.rs  editor.rs
crates/extension_host/: Cargo.toml
crates/extension_host/src/: extension_host.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs  fs_watcher.rs
crates/image_viewer/: Cargo.toml
crates/language_model_core/: Cargo.toml
crates/language_model_core/src/: language_model_core.rs
crates/language_models/src/provider/: cloud.rs
crates/language_models_cloud/: Cargo.toml
crates/language_models_cloud/src/: language_models_cloud.rs
crates/project/: Cargo.toml
crates/project/src/: agent_server_store.rs  context_server_store.rs  git_store.rs  project.rs  terminals.rs
crates/project/src/context_server_store/: registry.rs
crates/remote/: Cargo.toml
crates/remote/src/: remote.rs  remote_client.rs
crates/remote_server/: Cargo.toml
crates/remote_server/src/: headless_project.rs  main.rs  server.rs
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/sole_zed_editor_host/: Cargo.toml
crates/sole_zed_editor_host/src/: sole_zed_editor_host.rs
crates/terminal_view/: Cargo.toml
crates/web_search/: Cargo.toml
crates/web_search/src/: web_search.rs
crates/web_search_providers/: Cargo.toml
crates/web_search_providers/src/: cloud.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: multi_workspace.rs  pane.rs  security_modal.rs  welcome.rs  workspace.rs
crates/zed/: Cargo.toml
