[package]
name = "remote_server"
description = "Daemon used for remote editing"
edition.workspace = true
version = "0.1.0"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/server.rs"
doctest = false

[[bin]]
name = "remote_server"

[features]
default = []
askpass = ["dep:askpass"]
agent-server-downloads = ["project/agent-server-downloads"]
agent-registry = []
agent-server-store = []
context-server-store = []
crash-handler = ["dep:crashes"]
debug-adapters = [
    "debugger-rpc",
    "dep:dap_adapters",
    "dep:debug_adapter_extension",
    "extension-host",
]
debugger-rpc = []
directory-environment = ["dep:task"]
extension-host = ["dep:extension", "dep:extension_host"]
git-hosting-providers = ["dep:git_hosting_providers"]
image-files = ["dep:image"]
json-schema-store = ["dep:json_schema_store"]
kernel-processes = ["dep:uuid"]
language-extension = ["dep:language_extension", "extension-host"]
lsp-log-control = []
process-list = []
project-search = []
remote-file-downloads = []
remote-profiling = []
server-settings = []
telemetry = ["dep:telemetry"]
test-support = [
    "askpass",
    "agent-server-store",
    "context-server-store",
    "crash-handler",
    "debug-adapters",
    "directory-environment",
    "extension-host",
    "fs/test-support",
    "git-hosting-providers",
    "image-files",
    "json-schema-store",
    "kernel-processes",
    "language-extension",
    "lsp-log-control",
    "process-list",
    "project-search",
    "remote-file-downloads",
    "remote-profiling",
    "server-settings",
]

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
askpass = { workspace = true, optional = true }
clap.workspace = true
client.workspace = true
collections.workspace = true
crashes = { workspace = true, optional = true }
dap_adapters = { workspace = true, optional = true }
debug_adapter_extension = { workspace = true, optional = true }
env_logger.workspace = true
extension = { workspace = true, optional = true }
extension_host = { workspace = true, optional = true }
fs.workspace = true
futures.workspace = true
git.workspace = true
git_hosting_providers = { workspace = true, optional = true }
gpui.workspace = true
gpui_platform.workspace = true
gpui_tokio.workspace = true
http_client.workspace = true
image = { workspace = true, optional = true }
json_schema_store = { workspace = true, optional = true }
language.workspace = true
language_extension = { workspace = true, optional = true }
languages.workspace = true
log.workspace = true
lsp.workspace = true
net.workspace = true
node_runtime.workspace = true
paths.workspace = true
project.workspace = true
proto.workspace = true
release_channel.workspace = true
remote.workspace = true
reqwest_client.workspace = true
rpc.workspace = true
semver.workspace = true
serde_json.workspace = true
settings.workspace = true
shellexpand.workspace = true
smol.workspace = true
sysinfo.workspace = true
task = { workspace = true, optional = true }
telemetry = { workspace = true, optional = true }
util.workspace = true
watch.workspace = true
worktree.workspace = true
thiserror.workspace = true
rayon.workspace = true
uuid = { workspace = true, features = ["v4"], optional = true }

[target.'cfg(windows)'.dependencies]
windows.workspace = true
gpui = { workspace = true, features = ["windows-manifest"] }

[dev-dependencies]
acp_thread.workspace = true
action_log.workspace = true
agent = { workspace = true, features = ["test-support"] }
agent-client-protocol.workspace = true
client = { workspace = true, features = ["test-support"] }
clock = { workspace = true, features = ["test-support"] }
editor = { workspace = true, features = ["test-support"] }
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
http_client = { workspace = true, features = ["test-support"] }
language = { workspace = true, features = ["test-support"] }
language_model = { workspace = true, features = ["test-support"] }
lsp = { workspace = true, features = ["test-support"] }
node_runtime = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
remote = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
tempfile.workspace = true
theme = { workspace = true, features = ["test-support"] }
theme_settings.workspace = true
unindent.workspace = true
workspace = { workspace = true, features = ["test-support"] }
zlog.workspace = true

[build-dependencies]
cargo_toml.workspace = true
toml.workspace = true

[package.metadata.cargo-machete]
ignored = ["paths"]
