[package]
name = "sole_zed_editor_host"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/sole_zed_editor_host.rs"
doctest = false

[dependencies]
command_palette.workspace = true
editor.workspace = true
file_finder.workspace = true
git_ui.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
outline_panel.workspace = true
project_panel.workspace = true
release_channel.workspace = true
search.workspace = true
semver.workspace = true
theme.workspace = true
theme_settings.workspace = true
workspace.workspace = true
