[package]
name = "sole_zed_editor_host"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/sole_zed_editor_host.rs"
doctest = false

[features]
default = []
command-palette = ["dep:command_palette"]
editor-tools = ["command-palette", "outline", "search"]
outline = ["dep:outline_panel"]
project-ui = ["dep:file_finder", "dep:git_ui", "dep:project_panel"]
search = ["dep:search"]

[dependencies]
editor.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
release_channel.workspace = true
semver.workspace = true
theme.workspace = true
theme_settings.workspace = true
workspace.workspace = true
command_palette = { workspace = true, optional = true }
file_finder = { workspace = true, optional = true }
git_ui = { workspace = true, optional = true }
outline_panel = { workspace = true, optional = true }
project_panel = { workspace = true, optional = true }
search = { workspace = true, optional = true }
